@@ -45,7 +45,7 @@
 <div id='footer'>
     <div class='content'>
         <p>
-            <a class='nav' href='http://bitbucket.org/ned/coveragepy/'>coverage.py v3.0b2</a>
+            <a class='nav' href='http://nedbatchelder.com/code/coverage'>coverage v3.1b1</a>
         </p>
     </div>
 </div>
